Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.2.3
  FEATURES:
    * It's now possible to automatically use a USB Mass Storage device as a collection
      when it's connected.
    * The progress bar tooltip now shows the position in the track that the
      cursor is hovering, making it simple to jump to a specific position.
    * D-Bus: Added StopAfterCurrent method for /Player.
    * You can now elect to rescan specific folders. Right-click on a folder in
      the collection setup dialog to rescan just that folder. This will only
      work for folders that have previously been added to the collection, i.e.
      you cannot check a folder and immediately rescan it. This will never be
      recursive (as that defeats the point of scanning a specific folder!)
    * Non collection files with a cue sheet will now load their tracks as
      individual tracks in the playlist instead of as one big track with
      bookmark markers.
    * Dynamic Collection is back. (BR 171213)
    * Searching covers from Last.fm using custom query in interactive mode.
 
  CHANGES:
    * Files with ogg and flac extensions can now be copied to UMS devices.
    * The search/filter edit in the playlist is now cleared when pressing 
      enter. (BR 217159)
    * Amarok now checks if the version of the "amarokcollectionscanner" tool
      is correct. Some users had issues with having mutiple versions of it
      installed, causing scanning to fail.
    * First run: Let users decided on how to handle music location set
      in standard desktop services.
    * Improved cover fetching accuracy and speed.
    * Usability: Better design of playback configuration dialog.
    * Use millisecond accuracy for track bookmarks. Backwards compatible
      with bookmarks stored in previos versions. (BR 215145)
    * Loving a track for Last.fm via the global keyboard action also show a
      message in the status bar.